# autonomous_mobile_manipulation

CS791-AMMProject/: .gitignore  .gitmodules  README.md
CS791-AMMProject/cs791_amm_project/: CMakeLists.txt  package.xml
CS791-AMMProject/mm_coverage_planner/: CMakeLists.txt  package.xml
CS791-AMMProject/mm_coverage_planner/config/: full_data  viewpoints
CS791-AMMProject/mm_coverage_planner/config/rviz/: full_stack.rviz
CS791-AMMProject/mm_coverage_planner/include/: path_planner.hpp  viewpoint_grouper.hpp
CS791-AMMProject/mm_coverage_planner/include/utils/: data_loader.hpp  utils.hpp
CS791-AMMProject/mm_coverage_planner/launch/: move_group_interface_vBoat.launch  planner.launch  rosbag_recorder.launch  rviz.launch  stack.launch
CS791-AMMProject/mm_coverage_planner/rviz/: planner_sim.rviz
CS791-AMMProject/mm_coverage_planner/scripts/: test.sh
CS791-AMMProject/mm_coverage_planner/src/: main.cpp  path_planner.cpp  viewpoint_grouper.cpp
CS791-AMMProject/mm_coverage_planner/src/utils/: data_loader.cpp  utils.cpp
