<?xml version="1.0"?>
<package format="2">
  <name>cs791_amm_project</name>
  <version>0.0.0</version>
  <description>Dependancies for the project</description>
  <maintainer email="mdharmadhikar@nevada.unr.edu">Mihir Dharmadhikari</maintainer>
  <maintainer email="houmanekrami@gmail.com">Houman Ekrami</maintainer>
  <maintainer email="tolgakarakurt@gmail.com">Tolga Karakurt</maintainer>
  <maintainer email="mbs@gmail.com">Md Abu Sayed</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>mm_coverage_planner</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
</package>
